{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 39,
  "lineage": "776ece57-9a15-a420-2afc-256c1f221482",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050262276:internet-gateway/igw-071f0fba512f7486b",
            "id": "igw-071f0fba512f7486b",
            "owner_id": "975050262276",
            "tags": {
              "Name": "darth-igw"
            },
            "tags_all": {
              "Name": "darth-igw"
            },
            "vpc_id": "vpc-062ca91ea2e177847"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050262276:route-table/rtb-088d510e111cc8bcf",
            "id": "rtb-088d510e111cc8bcf",
            "owner_id": "975050262276",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071f0fba512f7486b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "darth-rtb"
            },
            "tags_all": {
              "Name": "darth-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-062ca91ea2e177847"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020a57a83867006c1",
            "route_table_id": "rtb-088d510e111cc8bcf",
            "subnet_id": "subnet-09975df3456045a95"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1adebaf5d09f719",
            "route_table_id": "rtb-088d510e111cc8bcf",
            "subnet_id": "subnet-05e12f73be4b74573"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050262276:security-group/sg-03fc24521ea1aa68d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03fc24521ea1aa68d",
            "ingress": [],
            "name": "terraform-20240504201252545900000001",
            "name_prefix": "terraform-",
            "owner_id": "975050262276",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "darth-sg"
            },
            "tags_all": {
              "Name": "darth-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-062ca91ea2e177847"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050262276:subnet/subnet-09975df3456045a95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09975df3456045a95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050262276",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darth-subnet-0"
            },
            "tags_all": {
              "Name": "darth-subnet-0"
            },
            "vpc_id": "vpc-062ca91ea2e177847"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050262276:subnet/subnet-05e12f73be4b74573",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e12f73be4b74573",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050262276",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darth-subnet-1"
            },
            "tags_all": {
              "Name": "darth-subnet-1"
            },
            "vpc_id": "vpc-062ca91ea2e177847"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050262276:vpc/vpc-062ca91ea2e177847",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-003cc4f79cb85ef8a",
            "default_route_table_id": "rtb-00f13170deb82493c",
            "default_security_group_id": "sg-058661fdad3159688",
            "dhcp_options_id": "dopt-02e9ad7504870a116",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062ca91ea2e177847",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00f13170deb82493c",
            "owner_id": "975050262276",
            "tags": {
              "Name": "darth-vpc"
            },
            "tags_all": {
              "Name": "darth-vpc"
            }
          }
        }
      ]
    }
  ]
}